// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Opportunities should match snapshot 1`] = `
<styled.section>
  <styled.section>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal"
      closeTimeoutMS={0}
      isOpen={false}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <Connect(CreateOppModal) />
    </Modal>
  </styled.section>
  <Link
    to="/profile"
  >
    <styled.button>
      Return to Profile
    </styled.button>
    <styled.button>
      Edit my Profile; doesnt work
    </styled.button>
  </Link>
  <styled.button
    id="showModal"
    onClick={[Function]}
  >
    Create an opportunity
  </styled.button>
  <styled.section>
    <styled.section
      key="2"
    >
      <styled.section>
        <styled.h1>
          Rake Leaves
        </styled.h1>
        <styled.p
          description={true}
        >
          I cannot rake my yard- I need someone to come in and get the front and back yard.
        </styled.p>
      </styled.section>
      <styled.section>
        <styled.p>
          <styled.span>
            Type: 
          </styled.span>
          Physical Labor
        </styled.p>
        <styled.p>
          <styled.span>
            Location:
          </styled.span>
           
          2848 Roslyn St., Denver CO 80238
        </styled.p>
        <styled.p>
          <styled.span>
            Estimated Time:
          </styled.span>
          1 hr
        </styled.p>
      </styled.section>
      <styled.section
        buttons={true}
      >
        <styled.button
          onClick={[Function]}
        >
          DELETE works and throws error
        </styled.button>
        <styled.button>
          This Edit Doesnt Work
        </styled.button>
      </styled.section>
    </styled.section>
  </styled.section>
</styled.section>
`;

exports[`Opportunities should render a different button if role is different 1`] = `
<styled.section>
  <styled.section>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal"
      closeTimeoutMS={0}
      isOpen={false}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      role="dialog"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <Connect(CreateOppModal) />
    </Modal>
  </styled.section>
  <Link
    to="/profile"
  >
    <styled.button>
      Return to Profile
    </styled.button>
    <styled.button>
      Edit my Profile; doesnt work
    </styled.button>
  </Link>
  <styled.button>
    Search For Opportunities
  </styled.button>
  <styled.section>
    <styled.section
      key="2"
    >
      <styled.section>
        <styled.h1>
          Rake Leaves
        </styled.h1>
        <styled.p
          description={true}
        >
          I cannot rake my yard- I need someone to come in and get the front and back yard.
        </styled.p>
      </styled.section>
      <styled.section>
        <styled.p>
          <styled.span>
            Type: 
          </styled.span>
          Physical Labor
        </styled.p>
        <styled.p>
          <styled.span>
            Location:
          </styled.span>
           
          2848 Roslyn St., Denver CO 80238
        </styled.p>
        <styled.p>
          <styled.span>
            Estimated Time:
          </styled.span>
          1 hr
        </styled.p>
      </styled.section>
      <styled.section
        buttons={true}
      >
        <styled.button
          onClick={[Function]}
        >
          Select opportunity; doesnt work
        </styled.button>
        <styled.button
          onClick={[Function]}
        >
          Find Out About The Client; doesnt work
        </styled.button>
      </styled.section>
    </styled.section>
  </styled.section>
</styled.section>
`;
